--- a/index.html
+++ b/index.html
@@ -1,55 +1,50 @@
 <!DOCTYPE html>
-<html lang="en-gb">
-
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="styles/reset.css" />
-  <title>Weather Dashboard</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="./style.css"> <!-- Link to your CSS file -->
 </head>
-
 <body>
-  <header class="container-fluid text-center text-white bg-dark p-2 weather-header">
-    <h1>Weather Dashboard</h1>
-  </header>
-
-  <!-- max-width for ultra wide resolutions -->
-  <div class="container-fluid" style="max-width: 1400px">
-    <div class="row">
-      <aside class="col-lg-3 pb-3">
-        <h2 id="form-heading" class="mt-1 h3 form-label">
-          Search for a City:
-        </h2>
-        <form id="search-form" class="form">
-          <div class="form-inline form-group">
-            <div class="input-group">
-              <input class="form-input weather-search" type="text" id="search-input" placeholder="London"
-                aria-labelledby="form-heading" aria-controls="today forecast" />
-              <div class="input-group-append">
-                <button type="submit" class="btn search-button" id="search-button" aria-label="submit search">
-                  Search
-                </button>
-                <hr class="hr weather-hr" />
-              </div>
-            </div>
-          </div>
-        </form>
-        <div class="list-group" id="history"></div>
-      </aside>
-
-      <div class="col-lg-9 pb-3">
-        <section id="today" class="mt-3" role="region" aria-live="polite"></section>
-        <section id="forecast" class="row mt-3" role="region" aria-live="polite"></section>
+    <header>
+        <h1>Weather Dashboard</h1>
+      </header>
+      <main>
+      <div id="search-area">
+      <label for="city-input">Search for a City:</label>
+      <input type="text" id="city-input" placeholder="Enter city name">
+      <button id="search-button">Search</button>
+      <div id="search-history">
+      <!-- Search history buttons will be dynamically inserted here -->
       </div>
-    </div>
+      </div>
+      <div id="weather-container">
+      <div id="current-weather">
+      <h2>Current Weather</h2>
+      <!-- Dynamically update with current weather info -->
+      <p>City Name: <span id="city-name">London</span></p>
+      <p>Date: <span id="current-date">14/9/2022</span></p>
+      <p>Temperature: <span id="temperature">13.63 °C</span></p>
+      <p>Wind: <span id="wind">1.7 KPH</span></p>
+      <p>Humidity: <span id="humidity">84%</span></p>
+      <!-- Additional weather details can be added here -->
   </div>
-
-  <!-- Day.js -->
-  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="script.js"></script>
+  <div id="forecast-weather">
+      <h2>5-Day Forecast:</h2>
+      <div class="forecast-day">
+          <!-- Each forecast day will be dynamically inserted here -->
+          <p><strong>15/9/2022</strong></p>
+          <img src="cloudy-icon.png" alt="Cloudy" class="weather-icon"> <!-- Replace with actual weather icon -->
+          <p>Temp: <span class="forecast-temp">18.89 °C</span></p>
+          <p>Wind: <span class="forecast-wind">2.76 KPH</span></p>
+          <p>Humidity: <span class="forecast-humidity">44 %</span></p>
+      </div>
+      <!-- Repeat for each day -->
+      <!-- ... -->
+  </div>
+</div>
+</main>
+<script src="./index.js"></script> <!-- Link to your JavaScript file -->
 </body>
-
 </html>
